content updates with some markdown

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: The Children's Gentle Immobilizer
+description: [The Children’s Gentle Immobilizer is a simple, durable or one time use design, versatile, one-piece radiolucent child medical positioning aid which holds secure all four extremities individually in an antimicrobial-infused soft foam wrap with no extraneous straps, boards, velcro, medical tape, bandages, clamps, pins or fabrics.]
+
 theme: jekyll-theme-cayman
+
+google_analytics: [Your Google Analytics tracking ID]
