--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ description: 'The Children’s Gentle Immobilizer is a simple, durable or one ti
 theme: jekyll-theme-cayman
 
 google_analytics: [Your Google Analytics tracking ID]
+
+github:
+  is_project_page: false
