--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: 'The Children’s Gentle Immobilizer is a simple, durable or one ti
 
 theme: jekyll-theme-cayman
 
-google_analytics: [Your Google Analytics tracking ID]
+google_analytics: UA-50387096-21
 
 github:
   is_project_page: false
