--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,35 @@
+# Setup
+name: The Children's Gentle Immobilizer
 title: The Children's Gentle Immobilizer
+tagline: A one-piece radiolucent child medical positioning aid.
 description: 'The Children’s Gentle Immobilizer is a simple, durable or one time use design, versatile, one-piece radiolucent child medical positioning aid which holds secure all four extremities individually in an antimicrobial-infused soft foam wrap with no extraneous straps, boards, velcro, medical tape, bandages, clamps, pins or fabrics.'
+baseurl: ""
+paginate: 1
+locale: "en"
 
+url: https://childrensgentleimmobilizer.com/
+
+# About/contact
+author:
+  name: Max Quattromani
+  url: maxquattromani.com
+
+#### Under the Hood Stuff #####
 theme: jekyll-theme-cayman
 
 google_analytics: UA-50387096-21
 
 github:
   is_project_page: false
+
+# Gems
+gems:
+  - jekyll-paginate
+
+#Others
+markdown: rdiscount
+
+# Exclude metadata and development time dependencies (like Grunt plugins)
+exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+
+
