--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,7 @@ gems:
   - jekyll-paginate
 
 #Others
-markdown: rdiscount
+markdown: kramdown
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
-
-
