removed gentle for safety

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Setup
-name: The Children's Gentle Immobilizer
-title: The Children's Gentle Immobilizer
+name: The Children's Safety Immobilizer
+title: The Children's Safety Immobilizer
 tagline: A one-piece radiolucent child medical positioning aid.
-description: 'The Children’s Gentle Immobilizer is a simple, durable or one time use design, versatile, one-piece radiolucent child medical positioning aid which holds secure all four extremities individually in an antimicrobial-infused soft foam wrap with no extraneous straps, boards, velcro, medical tape, bandages, clamps, pins or fabrics.'
+description: 'The Children’s Safety Immobilizer is a simple, durable or one time use design, versatile, one-piece radiolucent child medical positioning aid which holds secure all four extremities individually in an antimicrobial-infused soft foam wrap with no extraneous straps, boards, velcro, medical tape, bandages, clamps, pins or fabrics.'
 baseurl: ""
 paginate: 1
 locale: "en"
 
-url: https://childrensgentleimmobilizer.com/
+url: https://childrenssafetyimmobilizer.com/
 
 # About/contact
 author:
