Pediatric Position Holder - updates

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-name: The Children's Safety Immobilizer
-title: The Children's Safety Immobilizer
+name: The Pediatric Position Holder
+title: The Pediatric Position Holder
 tagline: A one-piece radiolucent child medical positioning aid.
-description: 'The Children’s Safety Immobilizer is a simple, durable or one time use design, versatile, one-piece radiolucent child medical positioning aid which holds secure all four extremities individually in an antimicrobial-infused soft foam wrap with no extraneous straps, boards, velcro, medical tape, bandages, clamps, pins or fabrics.'
+description: 'The Q Holder pediatric positioner is a revolutionary new pediatric child friendly device which is effective, safe, simple and versatile. The Q Holder standardizes the process of immobilization, offering consistency across all modes of care for the infant and child.'
 baseurl: ""
 paginate: 1
 locale: "en"
