updated tagline and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-name: The "Q" -Pediatric Position Holder
+name: The "Q" - Pediatric Position Holder
 title: The "Q" - Pediatric Position Holder
-tagline: A one-piece radiolucent child medical positioning aid.
-description: 'The Pediatric Position Holder is a revolutionary new pediatric child friendly device which is effective, safe, simple and versatile. The Pediatric Position Holder standardizes the process of immobilization, offering consistency across all modes of care for the infant and child.'
+tagline: A 1/2" Polyester soft foam one-piece radiolucent child medical positioning aid.
+description: 'The Pediatric Position Holder is a revolutionary new pediatric child friendly device which is effective, safe, simple and versatile. The Pediatric Position Holder standardizes the process of immobilization, offering consistency across all modes of care for the infant and child. Our 1/2" thick, soft polyester foam holder has no extraneous straps, boards, or hook & loop attachments'
 baseurl: ""
 paginate: 1
 locale: "en"
