--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: The "Q" - Pediatric Position Holder
 title: The "Q" - Pediatric Position Holder
 tagline: A 1/2" Polyester soft foam one-piece radiolucent child medical positioning aid.
-description: 'The Pediatric Position Holder is a revolutionary new pediatric child friendly device which is effective, safe, simple and versatile. The Pediatric Position Holder standardizes the process of immobilization, offering consistency across all modes of care for the infant and child. Our 1/2" thick, soft polyester foam holder has no extraneous straps, boards, or hook & loop attachments'
+description: 'The Pediatric Position Holder is a revolutionary new pediatric child friendly immobilizer which is effective, safe, simple and versatile. The Pediatric Position Holder is a new emerging medical technology for children that standardizes the process of immobilization, offering consistency across all modes of care for the infant and child. Our 1/2" thick, soft polyester foam holder has no extraneous straps, boards, or hook & loop attachments'
 baseurl: ""
 paginate: 1
 locale: "en"
