--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: The Q
 title: Pediatric Position Holder
 tagline: A 1/2" Polyester soft foam one-piece radiolucent child medical positioning aid.
 description: 'The Pediatric Position Holder is a revolutionary new pediatric child friendly immobilizer which is effective, safe, simple and versatile. The Pediatric Position Holder is a new emerging medical technology for children that standardizes the process of immobilization. The holder offers consistency across all modes of care for the infant and child. Our 1/2" thick, soft polyester foam holder has no extraneous straps, boards, or hook & loop attachments. Our hope is that we can lessen the anxiety, fear, amd distress that are common responses during imaging and other medical procedures.'
-logo: logo.png
+logo: 4Q-black.svg
 baseurl: ""
 paginate: 1
 locale: "en"
