--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,9 @@ author:
   url: maxquattromani.com
 
 #### Under the Hood Stuff #####
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 google_analytics: UA-50387096-21
 
